...
                        }
                    }
                } else {
                    Text("Loading...")
                }
            }
            .navigationTitle("FunGen")
            .toolbar {
                NavigationLink(destination: CreateActivityView()) {
                    Image(systemName: "plus")
                }
            }
        }
...
