...
                    } catch {
                        // TODO: handle error
                        print(error)
                    }
                }
                self.presentationMode.wrappedValue.dismiss()
            }, label: { Text("Delete") })
        }
    }
    
    func setUserSelectedOptionOnLoad(userID: User.ID, in activity: Activity) {
        if activity.members.contains(userID) {
            for optionID in activity.options.keys {
...
